load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["example.go"],
    importpath = "github.com/mindprince/gonvml/cmd/example",
    visibility = ["//visibility:private"],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "example",
    importpath = "github.com/mindprince/gonvml/cmd/example",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
